--- a/app.json
+++ b/app.json
@@ -3,7 +3,7 @@
   "description": "Bot De Telegram : Descargador gratis de contenido desde internet a owncloud , nexcloud en cuba",
   "repository": "https://github.com/ObisoftDev/ownclouduci",
   "env": {
-    "bot_token": {
+    "bot_token": {"5277008415:AAFVOIjwftp59g3XODLR9olnnzadsMdkxMo"
       "description": "El token del bot"
     },
     "proxy_enc": {
