--- a/requirements.txt
+++ b/requirements.txt
@@ -6,4 +6,48 @@ user_agent
 mega
 mega.py
 python-worker
-wheel
+
+aiosignal==1.2.0
+async-timeout==4.0.2
+attrs==21.4.0
+certifi==2022.6.15
+charset-normalizer==2.1.0
+click==8.1.3
+colorama==0.4.5
+cycler==0.11.0
+Cython==0.29.30
+Flask==2.1.2
+fonttools==4.34.4
+frozenlist==1.3.0
+future==0.18.2
+gunicorn==20.1.0
+idna==3.3
+itsdangerous==2.1.2
+Jinja2==3.1.2
+kiwisolver==1.4.3
+line-bot-sdk==2.3.0
+MarkupSafe==2.1.1
+matplotlib==3.5.2
+multidict==6.0.2
+numpy==1.23.1
+opencv-python==4.6.0.66
+packaging==21.3
+pandas==1.4.3
+Pillow==9.2.0
+pyparsing==3.0.9
+python-dateutil==2.8.2
+python-dotenv==0.20.0
+pytz==2022.1
+PyYAML==6.0
+requests==2.28.1
+scipy==1.8.1
+seaborn==0.11.2
+six==1.16.0
+thop==0.1.1.post2207130030
+torch==1.12.0
+torchvision==0.13.0
+tqdm==4.64.0
+typing_extensions==4.3.0
+urllib3==1.26.10
+Werkzeug==2.1.2
+yarl==1.7.2
