--- a/render.yml
+++ b/render.yml
@@ -4,17 +4,17 @@ import ProxyCloud
 
 
 
-BOT_TOKEN = '5363620265:AAFZ0WJTfRrGHAtOMDGuyxoNQe1RqUfg3Oo' #Aqui va el token del bot
+BOT_TOKEN = '5277008415:AAFVOIjwftp59g3XODLR9olnnzadsMdkxMo' #Aqui va el token del bot
 
-API_ID =  12168140 #Tu api id de telegram
+API_ID =  15558101 #Tu api id de telegram
 
-API_HASH = '3504ce0eddb7dff4288d05d5e3dc5e4c' #Tu api id de telegram
+API_HASH = 'c2cbb2f07c44fe466076fbe65e3c00cc' #Tu api id de telegram
 
 SPLIT_FILE = 1024 * 1024 * int(os.environ.get('split_file','99'))
 
 ROOT_PATH = 'root/'
 
-ACCES_USERS = os.environ.get('tl_admin_user','quejestoniuyol').split(';')
+ACCES_USERS = os.environ.get('tl_admin_user','Elnietodecacha').split(';')
 
 
 
@@ -42,4 +42,4 @@ if PROXY:
 
 space = {}
 
-space['quejestoniuyol'] = 0
+space['Elnietodecacha'] = 0
