--- a/app.json
+++ b/app.json
@@ -3,12 +3,12 @@
   "description": "Bot De Telegram : Descargador gratis de contenido desde internet a owncloud , nexcloud en cuba",
   "repository": "https://github.com/ObisoftDev/ownclouduci",
   "env": {
-    "bot_token": {"5277008415:AAFVOIjwftp59g3XODLR9olnnzadsMdkxMo"
+    "bot_token": {
       "description": "El token del bot"
     },
     "proxy_enc": {
       "description": "Proxy Encriptado",
-      "value": "http://KHGEJHYFJHLIFKYEDDGGYHKDDILIRFDKLEDDLD"
+      "value": "http://KDDHKIYEJEJGGIYFJEGDIEYEKIKGFFRJHHCDHICJ"
     },
     "api_id": {
       "description": "Api Id de telegram",
